crates/monosecret/tests/snapshots/cli_command_arms__env_command_emits_dotenv_to_output_file-2.snap
---
source: crates/monosecret/tests/cli_command_arms.rs
expression: "fs::read_to_string(&output_file).unwrap()"
---
API_KEY="env-value"
OPTIONAL="fallback"
