crates/monosecret/tests/snapshots/cli_command_arms__env_command_emits_dotenv_to_output_file.snap
---
source: crates/monosecret/tests/cli_command_arms.rs
info:
  program: monosecret
  args:
    - "-f"
    - monosecret.toml
    - "--reason"
    - test
    - env
    - "--shell"
    - dotenv
    - "--provider"
    - local
    - "--output"
    - env.out
  env:
    HOME: /tmp/monosecret-cli-arms-env
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
