crates/monosecret/tests/snapshots/cli_command_arms__set_command_writes_secret_to_provider-2.snap
---
source: crates/monosecret/tests/cli_command_arms.rs
expression: "fs::read_to_string(&dotenv).unwrap()"
---
API_KEY="secret-value"
