crates/monosecret/tests/snapshots/cli_command_arms__set_command_writes_secret_to_provider.snap
---
source: crates/monosecret/tests/cli_command_arms.rs
info:
  program: monosecret
  args:
    - "-f"
    - monosecret.toml
    - "--reason"
    - test
    - set
    - API_KEY
    - secret-value
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-arms-set
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Writing secret 'API_KEY' to dotenv:[TMPDIR] (profile: default)
  target: item=API_KEY
✓ Secret 'API_KEY' saved to dotenv (profile: default)
